internal/kgateway/translator/gateway/testutils/inputs/httplistenerpolicy/merge.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: opentelemetry-collector
spec:
  selector:
    test: test
  ports:
  - protocol: HTTP
    port: 4317
